layout updates, additionall content

--- a/style.css
+++ b/style.css
@@ -109,11 +109,11 @@ a:hover {
 }
 
 a {
-  color: #2ba6cb;
+  color: #fff;
   text-decoration: none;
   line-height: inherit; }
   a:hover, a:focus {
-    color: #898f8d; }
+    color: #F1F8F3; }
   a img {
     border: none; }
 
@@ -130,6 +130,7 @@ h1 {
     font-size: 2em;
     margin: 0.67em 0;
 }
+
 
 /**
  * Address styling not present in IE 8/9, Safari 5, and Chrome.
@@ -344,7 +345,7 @@ input[type="submit"] {
  * Re-set default cursor for disabled elements.
  */
 
-button[disabled],
+button[enabled],
 html input[disabled] {
     cursor: default;
 }
@@ -439,9 +440,11 @@ html[xmlns] .clearfix {
     height: 1%;
 }
 
-/*****************************************************************************
+
+      /*****************************************************************************
 *************************START MICHAEL FACCHINELLO STYLE**********************
 ******************************************************************************/
+
 html {
   background-image: url(Henry Handstand-1.jpg);
   background-repeat: no-repeat;
@@ -451,6 +454,7 @@ html {
   -o-background-size: cover;
   background-size: cover;
 }
+
 
 body {
 background: #fff;
@@ -485,7 +489,7 @@ header.header {
 	position: fixed;
 	top: 0;
 	z-index: 13;
-	height: 80px;
+	height: 5.000em;
 	text-align: center;
 
     
@@ -521,8 +525,8 @@ div.container-group{
 
 
 header.header #logo {
-	width: 68px;
-	height: 68px;
+	width: 4.250em;
+	height: 4.250em;
 	text-indent: 100%;
 	overflow: hidden;
 	white-space: nowrap;
@@ -537,8 +541,8 @@ header.header #logo {
 }
 
  #email {
-  width: 70px;
-  height: 40px;
+  width: 4.375em;
+  height: 2.500em;
   text-indent: 100%;
   overflow: hidden;
   white-space: nowrap;
@@ -546,6 +550,7 @@ header.header #logo {
   margin-top: 20px;
   display: block;
   padding-right: 20px;
+  width:;
   }
 
 
@@ -560,11 +565,20 @@ header.header #logo {
   -webkit-box-shadow: inset 0px 0px 0px 0px rgba(255, 255, 255, 0.2), 0px 0px 1px 0px rgba(255, 255, 255, 0.0392157);
   -o-box-shadow: inset 0px 0px 0px 0px rgba(255, 255, 255, 0.2), 0px 0px 1px 0px rgba(255, 255, 255, 0.0392157);
   box-shadow: inset 0px 0px 0px 0px rgba(255, 255, 255, 0.2), 0px 0px 1px 0px rgba(255, 255, 255, 0.0392157);
-  width: 100px;
-  height: 40px;
+  width: 6.250;
+  height: 2.500;
   margin-top: 20px;
   float: right;
+  text-decoration: none;
+
 }
+
+button:hover, button:focus, .button:hover, .button:focus {
+    background-color: rgba(3, 51, 102, 0.853529); }
+  button:hover, button:focus, .button:hover, .button:focus {
+    color: white; }
+
+
 
 
 #billboard {
@@ -608,11 +622,10 @@ padding-top: 20%;
 }
 
  #billboard .next-chapter .caret {
-position: relative;
+position: center;
 display: block;
 margin: 0 auto;
 width: 50px;
-height: 50px;
 content: ">";
 color:white;
 text-decoration:none !important;
@@ -632,6 +645,7 @@ text-decoration:none; /*!important!*/
 
 }
 
+
 #about {
  background: rgba(0, 128, 128, 0.654902);
   -moz-box-shadow: none;
@@ -648,22 +662,31 @@ text-decoration:none; /*!important!*/
   display:block;
 }
 
+
 .container {
 width: 80%;
 /*height: 80%;*/
 position: relative;
 margin: auto;
-padding-top: 12%;
+padding-top: 1%;
 text-align: center;
  }
 
-.michaelSocial{
+ .container h2{
+  font-size: 34px;
+font-weight: 100;
+ }
+
+.michaelSocialContainer{
   text-align: center;
-   width: 300px;
+   width: 30%;
+   height: auto;
+   padding-top: 10%;
+ }
 
 
   
-}
+
   #michael {
     float:left;
     display: inline;
@@ -673,15 +696,19 @@ text-align: center;
    
 }
 
+ #spacing{
+  padding-top:5%; 
+ }
+
  .social{
 
-  width:100%;
-  height: 45px;
-  text-align: center;
-  display: block;
- position: relative;
- margin-bottom: 20px;
+ padding-top: 7%;
 
+}
+
+.coloredBackground{
+  color:#033366;
+   background: rgba(3, 51, 102, 0.23529);
 }
 
 #icon {
@@ -696,9 +723,14 @@ text-align: center;
   margin-bottom: 10px;
 }
 
+.column {
+  width: 70%;
+  height: auto;
+}
+
 .paragraph {
  display: inline;
-width: 30%;
+width: 50%;
 margin: auto;
 text-align: justify;
 margin-left: 50px;
@@ -716,9 +748,14 @@ margin-left: 50px;
   height: 800px;
   position: relative;
   overflow: hidden;
-  /*text-align: center; */
+  text-align: center;
   display:block;
 }
+
+.blue{
+  color: #033366;;
+}
+
 
  #icons {
     float:center;
@@ -726,6 +763,7 @@ margin-left: 50px;
     border-radius: 22.22222222223%;
     margin-right: 50px;
     margin-bottom: 20px;
+
 }
 
 
@@ -744,6 +782,7 @@ margin-left: 50px;
   /*text-align: center; */
   display:block;
 }
+
 
 /*rgba(168, 9, 28, 0.733333)*/
 
