--- a/style.css
+++ b/style.css
@@ -524,6 +524,18 @@ div.container-group{
 }
 
 
+@media (min-width: 320px)(max-width: 475px) {
+  div.container-group{
+  background: transparent;
+  width: 100px;
+  position: center;
+  margin: 0 auto;
+  display: inline-block;
+  }
+  
+}
+
+
 header.header #logo {
 	width: 4.250em;
 	height: 4.250em;
@@ -624,7 +636,8 @@ padding-top: 20%;
  #billboard .next-chapter .caret {
 position: center;
 display: block;
-margin: 0 auto;
+
+
 width: 50px;
 content: ">";
 color:white;
@@ -670,6 +683,7 @@ position: relative;
 margin: auto;
 padding-top: 1%;
 text-align: center;
+
  }
 
  .container h2{
@@ -745,7 +759,7 @@ margin-left: 50px;
   border-radius: 0px;
   border: none;
   width: 100%;
-  height: 800px;
+ 
   position: relative;
   overflow: hidden;
   text-align: center;
@@ -776,11 +790,15 @@ margin-left: 50px;
   border-radius: 0px;
   border: none;
   width: 100%;
-  height: 800px;
+  
   position: relative;
   overflow: hidden;
   /*text-align: center; */
   display:block;
+}
+
+#floatdownplease {
+  padding-top: 7%;
 }
 
 
